tests/ui/g-par-duplicate-label.stderr
error[E0080]: evaluation panicked: parallel frontier logical labels must be unique
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<0, hibana::g::Par<hibana::g::Send<0, 1, hibana::g::Msg<5, ()>>, hibana::g::Send<0, 2, hibana::g::Msg<5, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Par<hibana::g::Send<0, 1, Msg<5, ()>>, hibana::g::Send<0, 2, Msg<5, ()>>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |             panic!("parallel frontier logical labels must be unique")
  |             --------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<0, Par<hibana::g::Send<0, 1, Msg<5, ()>>, hibana::g::Send<0, 2, Msg<5, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
